--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
-    "bootstrap": "^5.2.3",
     "bcrypt": "^5.0.0",
+    "bootstrap": "^5.2.3",
     "html-react-parser": "^1.4.14",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-to-pdf": "0.0.14",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
