--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "html-react-parser": "^1.4.14",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-mailchimp-subscribe": "^2.1.3",
