--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.0.0",
     "bootstrap": "^5.2.3",
     "html-react-parser": "^1.4.14",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-collapsible": "^2.10.0",
@@ -25,7 +26,6 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "react-to-pdf": "0.0.14",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
