--- a/client/package.json
+++ b/client/package.json
@@ -23,12 +23,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-mailchimp-subscribe": "^2.1.3",
+    "react-pdf": "^7.0.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "written-number": "^0.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
