--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
     "written-number": "^0.11.1",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.2/xlsx-0.19.2.tgz"
