--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.8.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "universal-cookie": "^4.0.4",
