--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mercadopago": "^1.5.14",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.6",
     "pg": "^8.5.1",
     "sequelize": "^6.29.0"
   },
